continuação da API